app-test/testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-literal/check/patmat.check
Error in "testdata/typesystem/neg/pattern-matching-analysis-exhaustivity-literal/src/patmat.cal" on line 6:
                case b of
                     ^
case may not be exhaustive.

It would fail on pattern: false